--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.1",
+    "node-sass": "^4.14.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
