--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-image-crop": "^8.6.9",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
+    "react-to-print": "^2.14.7",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
