--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-image-crop": "^8.6.9",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
     "react-to-print": "^2.14.7",
